<resources>
    <string name="sans_serif">sans-serif</string>
    <string name="title_activity_main">Diagnosis</string>
    <string name="any_associated_symptom">Any associated symptom ?</string>
    <string name="continue_button">Continue</string>
    <string name="back_button">Back</string>
    <string name="duration">Duration</string>
    <string name="where_did_it_start">Where did it start ?</string>
    <string name="where_is_it_now">Where is it now ?</string>
    <string name="how_did_it_start">How did it start ?</string>
    <string name="intensity">Intensity</string>
    <string name="nature">Nature</string>
    <string name="what_brings_it_on">What brings it on ?</string>
    <string name="relieved_by">Relieved by</string>
    <string name="diarrhoea">Diarrhoea</string>
    <string name="constipation">Constipation</string>
    <string name="change_in_bowel_habit">Change in bowel habit</string>
    <string name="pain_during_passing_stool">Pain during passing stool</string>
    <string name="amount">Amount</string>
    <string name="colour">Colour</string>
    <string name="progress">Progress</string>
    <string name="h_o_injury">H/O Injury</string>
    <string name="where">Where</string>
    <string name="is_there_constipation">Is there Constipation ?</string>
    <string name="is_there_a_cough">Is there a Cough ?</string>
    <string name="is_there_chest_pain">Is there Chest Pain ?</string>
    <string name="is_there_abdominal_pain">Is there Abdominal Pain ?</string>
    <string name="weight">Weight</string>
    <string name="appetite">Appetite</string>
    <string name="difficulty_in_breathing">Difficulty in Breathing</string>
    <string name="is_there_itchy_throat">Is there itchy throat ?</string>
    <string name="is_there_running_nose">Is there running nose ?</string>
    <string name="is_there_expectoration">Is there expectoration ?</string>
    <string name="is_there_a_fever">Is there a fever ?</string>
    <string name="didnt_move">Didn\'t Move</string>
    <string name="others">Others</string>
    <string name="started_at">Started at</string>
    <string name="now_at">Now at</string>
    <string name="how_started">How Started</string>
    <string name="brought_on_by">Brought On By</string>
    <string name="symptoms">Symptoms</string>
    <string name="none">None</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="discharge_from_ear">Discharge from Ear</string>
    <string name="bleeding_from_ear">Bleeding from Ear</string>
    <string name="diminished_hearing">Diminished Hearing</string>
    <string name="cough">Cough</string>
    <string name="fever">Fever</string>
    <string name="change_of_voice">Change of Voice</string>
    <string name="difficulty_in_swallowing">Difficulty in Swallowing</string>
    <string name="around_the_anal_region">Around the Anal Region</string>
    <string name="anal_region">Anal Region</string>
    <string name="lots_of_bleeding">Lots of bleeding</string>
    <string name="drops_of_blood">Drops of blood</string>
    <string name="bright_red">Bright Red</string>
    <string name="dark_red">Dark Red</string>
    <string name="bad_smell">Bad Smell</string>
    <string name="swelling_in_gums">Swelling in Gums</string>
    <string name="bleeding_from_gums">Bleeding from Gums</string>
    <string name="swelling">Swelling</string>
    <string name="inability_to_move">Inability to move</string>
    <string name="inactivity">Inactivity</string>
    <string name="activity">Activity</string>
    <string name="sudden">Sudden</string>
    <string name="gradual">Gradual</string>
    <string name="mild">Mild</string>
    <string name="moderate">Moderate</string>
    <string name="severe">Severe</string>
    <string name="varies">Varies</string>
    <string name="continuous">Continuous</string>
    <string name="comes_and_goes">Comes and Goes</string>
    <string name="always_there_but_sometimes_worse">Always there but sometimes worse</string>
    <string name="dull">Dull</string>
    <string name="sharp">Sharp</string>
    <string name="constant_sense_of_pressure">Constant sense of Pressure</string>
    <string name="vomiting">Vomiting</string>
    <string name="food">Food</string>
    <string name="rest">Rest</string>
    <string name="period">Period</string>
    <string name="injury">Injury</string>
    <string name="exertion">Exertion</string>
    <string name="vertigo">Vertigo</string>
    <string name="empty_stomach">Empty Stomach</string>
    <string name="acidity">Acidity</string>
    <string name="nausea">Nausea</string>
    <string name="loss_of_appetite">Loss of Appetite</string>
    <string name="walking">Walking</string>
    <string name="weakness_of_legs">Weakness of Legs</string>
    <string name="difficult_to_control">Difficult to Control</string>
    <string name="discharge_from_nipple">Discharge from Nipple</string>
    <string name="bleeding_from_nipple">Bleeding from Nipple</string>
    <string name="unconsciousness">Unconsciousness</string>
    <string name="extreme_anxiety">Extreme Anxiety</string>
    <string name="sweating">Sweating</string>
    <string name="bright_light">Bright Light</string>
    <string name="loud_noise">Loud Noise</string>
    <string name="back_of_mouth">Back of Mouth</string>
    <string name="front_of_throat">Front of Throat</string>
    <string name="both">Both</string>
    <string name="spread_to_groin">Spread to Groin</string>
    <string name="discharge">Discharge</string>
    <string name="bleeding">Bleeding</string>
    <string name="passage_of_stool">Passage of Stool</string>
    <string name="pain_or_difficulty_in_urinating">Pain or Difficulty in Urinating</string>
    <string name="improving">Improving</string>
    <string name="same_as_before">Same as before</string>
    <string name="worsening">Worsening</string>
    <string name="chest_pain">Chest Pain</string>
    <string name="abdominal_pain">Abdominal Pain</string>
    <string name="increased">Increased</string>
    <string name="decreased">Decreased</string>
    <string name="normal">Normal</string>
    <string name="no_change">No Change</string>
    <string name="expectoration">Expectoration</string>
    <string name="itchy_throat">Itchy Throat</string>
    <string name="running_nose">Running Nose</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string-array name="select_or_describe_limbs">
        <item>Limb 1</item>
        <item>Limb 2</item>
        <item>Limb 3</item>
        <item>Others</item>
    </string-array>
    <string-array name="right_left_array">
        <item>@string/right</item>
        <item>@string/left</item>
    </string-array>
    <string-array name="yes_no_array">
        <item>@string/yes</item>
        <item>@string/no</item>
    </string-array>
    <string-array name="none_others_array">
        <item>@string/none</item>
        <item>@string/others</item>
    </string-array>
    <string-array name="didnt_move_others_array">
        <item>@string/didnt_move</item>
        <item>@string/others</item>
    </string-array>
    <string-array name="pain_how_started">
        <item>@string/sudden</item>
        <item>@string/gradual</item>
        <item>@string/others</item>
    </string-array>
    <string-array name="pain_intensity">
        <item>@string/mild</item>
        <item>@string/moderate</item>
        <item>@string/severe</item>
        <item>@string/varies</item>
    </string-array>
    <string-array name="pain_nature">
        <item>@string/continuous</item>
        <item>@string/comes_and_goes</item>
        <item>@string/always_there_but_sometimes_worse</item>
    </string-array>
    <string-array name="chest_pain_nature">
        <item>@string/dull</item>
        <item>@string/sharp</item>
        <item>@string/constant_sense_of_pressure</item>
        <item>@string/others</item>
    </string-array>
    <string-array name="abdominal_pain_started_at">
        <item>Upper(R)</item>
        <item>Upper(C)</item>
        <item>Upper(L)</item>
        <item>Middle(R)</item>
        <item>Middle(C)</item>
        <item>Middle(L)</item>
        <item>Lower(R)</item>
        <item>Lower(C)</item>
        <item>Lower(L)</item>
        <item>All Over</item>
    </string-array>
    <string-array name="abdominal_pain_now_at">
        <item>@string/didnt_move</item>
        <item>Upper(R)</item>
        <item>Upper(C)</item>
        <item>Upper(L)</item>
        <item>Middle(R)</item>
        <item>Middle(C)</item>
        <item>Middle(L)</item>
        <item>Lower(R)</item>
        <item>Lower(C)</item>
        <item>Lower(L)</item>
        <item>All Over</item>
    </string-array>
    <string-array name="abdominal_pain_brought_on_by">
        <item>@string/none</item>
        <item>@string/food</item>
        <item>@string/empty_stomach</item>
        <item>@string/period</item>
        <item>@string/others</item>
    </string-array>
    <string-array name="abdominal_pain_relieved_by">
        <item>@string/none</item>
        <item>@string/food</item>
        <item>@string/vomiting</item>
        <item>@string/others</item>
    </string-array>
    <string-array name="abdominal_pain_symptoms">
        <item>@string/none</item>
        <item>@string/constipation</item>
        <item>@string/diarrhoea</item>
        <item>@string/vomiting</item>
        <item>@string/loss_of_appetite</item>
        <item>@string/nausea</item>
        <item>@string/acidity</item>
        <item>@string/fever</item>
        <item>@string/others</item>
    </string-array>
    <string-array name="back_pain_started_at">
        <item>Upper(L)</item>
        <item>Upper(R)</item>
        <item>Upper(C)</item>
        <item>Lower(L)</item>
        <item>Lower(R)</item>
        <item>Lower(C)</item>
        <item>All Over</item>
    </string-array>
    <string-array name="back_pain_now_at">
        <item>@string/didnt_move</item>
        <item>Front(R)</item>
        <item>Front(L)</item>
        <item>Front of Leg(R)</item>
        <item>Back of Leg(R)</item>
        <item>Front of Leg(L)</item>
        <item>Back of Leg(L)</item>
        <item>@string/others</item>
    </string-array>
    <string-array name="back_pain_brought_on_by">
        <item>@string/none</item>
        <item>@string/walking</item>
        <item>@string/exertion</item>
        <item>@string/others</item>
    </string-array>
    <string-array name="back_pain_relieved_by">
        <item>@string/none</item>
        <item>@string/rest</item>
        <item>@string/others</item>
    </string-array>
    <string-array name="back_pain_symptoms">
        <item>@string/none</item>
        <item>@string/h_o_injury</item>
        <item>@string/weakness_of_legs</item>
        <item>@string/difficult_to_control</item>
        <item>@string/others</item>
    </string-array>
    <string-array name="breast_pain_started_at">
        <item>RUO(R)</item>
        <item>RLO(R)</item>
        <item>LUO(R)</item>
        <item>LLO(R)</item>
        <item>C(R)</item>
        <item>RUO(L)</item>
        <item>RLO(L)</item>
        <item>LUO(L)</item>
        <item>LLO(L)</item>
        <item>C(L)</item>
        <item>All Over</item>
    </string-array>
    <string-array name="breast_pain_now_at">
        <item>@string/didnt_move</item>
        <item>RUO(R)</item>
        <item>RLO(R)</item>
        <item>LUO(R)</item>
        <item>LLO(R)</item>
        <item>C(R)</item>
        <item>RUO(L)</item>
        <item>RLO(L)</item>
        <item>LUO(L)</item>
        <item>LLO(L)</item>
        <item>C(L)</item>
        <item>All Over</item>
    </string-array>
    <string-array name="breast_pain_brought_on_by">
        <item>@string/none</item>
        <item>@string/period</item>
        <item>@string/activity</item>
        <item>@string/others</item>
    </string-array>
</resources>