<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <LinearLayout
            android:id="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/durationScrotalPain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/duration"
                    android:textColor="#E1BEE7"
                    android:textSize="20sp"
                    android:textStyle="italic"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/startedAtScrotalPain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/where_did_it_start"
                    android:textColor="#E1BEE7"
                    android:textSize="20sp"
                    android:textStyle="italic"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/nowAtScrotalPain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/where_is_it_now"
                    android:textColor="#E1BEE7"
                    android:textSize="20sp"
                    android:textStyle="italic"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/howStartedScrotalPain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/how_did_it_start"
                    android:textColor="#E1BEE7"
                    android:textSize="20sp"
                    android:textStyle="italic"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/intensityScrotalPain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/intensity"
                    android:textColor="#E1BEE7"
                    android:textSize="20sp"
                    android:textStyle="italic"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/natureScrotalPain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/nature"
                    android:textColor="#E1BEE7"
                    android:textSize="20sp"
                    android:textStyle="italic"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/broughtOnByScrotalPain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/what_brings_it_on"
                    android:textColor="#E1BEE7"
                    android:textSize="20sp"
                    android:textStyle="italic"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/relievedByScrotalPain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/relieved_by"
                    android:textColor="#E1BEE7"
                    android:textSize="20sp"
                    android:textStyle="italic"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/symptomsScrotalPain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/any_associated_symptom"
                    android:textColor="#E1BEE7"
                    android:textSize="20sp"
                    android:textStyle="italic"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backButtonScrotalPain"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/back_button"/>

        <Button
            android:id="@+id/continueButtonScrotalPain"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/continue_button"/>
    </LinearLayout>
</LinearLayout>